--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -13,3 +13,4 @@
 @use "components/Footer";
 @use "page/Productpage/Allproducts";
 @use "page/Productpage/ProductDetails";
+@use "page/cartpage/Cartpage";
