--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -35,6 +35,7 @@
       .icon {
         font-size: 1.5rem;
         cursor: pointer;
+        color: black;
       }
     }
   }
@@ -222,6 +223,9 @@
 
 @media (max-width: 768px) {
   .header {
+    position: relative;
+    z-index: 100;
+
     &-search {
       margin: 0 1rem;
 
@@ -243,10 +247,6 @@
     .mobile-search-overlay {
       display: block; // Enable overlay on mobile
     }
-
-    // Ensure header content is visible above overlay
-    position: relative;
-    z-index: 100;
   }
 }
 
@@ -354,15 +354,16 @@
 @media (max-width: 768px) {
   .user-menu {
     position: fixed;
-    top: auto;
+    top: var.$header-height;
     bottom: 0;
     left: 0;
     right: 0;
     width: 100%;
-    border-radius: 12px 12px 0 0;
+    border-radius: 0;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
     transform: translateY(100%);
     transition: transform 0.3s ease-out;
+    height: fit-content;
 
     &.active {
       transform: translateY(0);
