--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -13,4 +13,11 @@
 @use "components/Footer";
 @use "page/Productpage/Allproducts";
 @use "page/Productpage/ProductDetails";
-@use "page/cartpage/Cartpage";
+@use "page/Cartpage/Cartpage";
+@use "components/cart/Addressmodal";
+@use "page/Profile/Profile";
+@use "page/Profile/SavedAddress";
+@use "page/Profile/OrderHistory";
+@use "page/Profile/HelpAndSupport";
+@use "page/Loginpage/Loginpage";
+@use "page/Signuppage/Signuppage";
