--- a/Sass/page/Productpage/_ProductDetails.scss
+++ b/Sass/page/Productpage/_ProductDetails.scss
@@ -265,7 +265,7 @@
           width: fit-content;
 
           .type-btn {
-            width: 140px;
+            width: 9.5rem;
             padding: 0.75rem 1rem;
             border: 1px solid #ddd;
             border-radius: 4px;
